// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/Ship Image Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="aircraft.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="battleship.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="carriership.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhUy dWjoNZ"
    src="submarine.png"
  />
</div>
`;

exports[`Storyshots game/GameScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqNJr gjMQXT"
  >
    <div
      className="sc-fzoXzr fQqoaX"
    >
      <div
        className="sc-fzpjYC dsySeg"
      >
        <div
          className="sc-fzoyAV uphNT"
        >
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Hits
            </span>
          </div>
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Shots
            </span>
          </div>
          <div
            className="sc-fzpans DoiQQ"
          >
            <span
              className="sc-fzplWN iyluzC"
            />
            <span
              className="sc-fznyAO FULts"
            >
              Turns
            </span>
          </div>
        </div>
        <div
          className="sc-fzoLag JhxoW"
        />
      </div>
    </div>
    <div
      className="sc-fzokOt jgNOAJ"
    >
      <div
        className="sc-fzqBZW fqefWv"
      >
        <div
          className="sc-AxgMl iluWPs title"
        >
          GAME OVER
        </div>
        <div
          className="sc-fzpjYC dsySeg"
        >
          <div
            className="sc-AxirZ kgiUck"
            onClick={[Function]}
          >
            PLAY AGAIN
          </div>
          <div
            className="sc-AxirZ kgiUck"
            onClick={[Function]}
          >
            CHANGE MODE
          </div>
          <div
            className="sc-AxirZ kgiUck"
            onClick={[Function]}
          >
            LEADERBOARD
          </div>
          <div
            className="sc-AxirZ kgiUck"
            onClick={[Function]}
          >
            EXIT
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Grid Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxmLO hhKCTA"
    size={10}
  >
    <div
      className="sc-fzozJi eoxiOd"
      size={10}
    />
    <span
      className="sc-fzoLsD iPnbQW"
    >
      1
    </span>
    <span
      className="sc-fzoLsD eijXTv"
    >
      2
    </span>
    <span
      className="sc-fzoLsD cwSGcM"
    >
      3
    </span>
    <span
      className="sc-fzoLsD csBbVZ"
    >
      4
    </span>
    <span
      className="sc-fzoLsD dNIGXy"
    >
      5
    </span>
    <span
      className="sc-fzoLsD kwbmyT"
    >
      6
    </span>
    <span
      className="sc-fzoLsD iGYfpM"
    >
      7
    </span>
    <span
      className="sc-fzoLsD iCGBiZ"
    >
      8
    </span>
    <span
      className="sc-fzoLsD bWDKUJ"
    >
      9
    </span>
    <span
      className="sc-fzoLsD kFQpAI"
    >
      10
    </span>
    <span
      className="sc-fzoLsD hufJsq"
    >
      A
    </span>
    <span
      className="sc-fzoLsD hufVQr"
    >
      B
    </span>
    <span
      className="sc-fzoLsD huemuE"
    >
      C
    </span>
    <span
      className="sc-fzoLsD hueySF"
    >
      D
    </span>
    <span
      className="sc-fzoLsD hueLvy"
    >
      E
    </span>
    <span
      className="sc-fzoLsD hueXTz"
    >
      F
    </span>
    <span
      className="sc-fzoLsD hudikA"
    >
      G
    </span>
    <span
      className="sc-fzoLsD huduIB"
    >
      H
    </span>
    <span
      className="sc-fzoLsD gBCIAZ"
    >
      I
    </span>
    <span
      className="sc-fzoLsD gBLffg"
    >
      J
    </span>
    <div
      className="sc-AxheI cLBCkG"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI inqEND"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI GbrUg"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bAgKGV"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jbIuDi"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dobNHj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cJPxSc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dDUQER"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gCsqVp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI equbqQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fySJkr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dDqDIq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eFFqhJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cHMjzQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI zDSdX"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jTxwaS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gJtwfF"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eLApxM"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iGvFYI"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cmqMnx"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI imfCNc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI IjOAN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI VafNS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI lomaJn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fJIYAc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jviTMJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI BVYSu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kVhTNP"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dwqzCD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hItxtW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gicnJJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eZuNhY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI djHYr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI khGPPK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dFFJwJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cwYiUY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kZBkBP"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jOCIUm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI IZsCS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kvKEtH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hhQnAu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bujGEv"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hziqdo"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI itnIQd"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eFtJnu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI khiLQr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hgejhQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iajBUF"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kYHcld"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iMIMGE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jVhuAf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hZFoYe"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jqERV"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jAThIY"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hsKQnf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fxiKLe"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI lfIhvt"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jhPaNA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bNoHPA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gIFxDl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dSaAnE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hDAvAl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ftyzTW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI exoLqv"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI kihsGg"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI cElEtR"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hsTolm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gwJzHL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI krHgCb"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI doouUy"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bNXlkl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI FpKIA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eBIcev"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dqJAwS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI ieedCN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gVwDbc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gBcQvL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI fqeoOi"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hEpZCq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI gbFBUj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eazhsJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI imOtJo"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jZonZr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI HXheC"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI smIAx"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eEBURc"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bKUckj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dIYEOq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hLgDSO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI geVpJD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI coyvQI"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI iswnmB"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI enZVry"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI KvHz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI jVHGxs"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI eKjOup"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI hpbtbm"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI dbLTrn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bvzTWz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxheI bfgqgW"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game/Header Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxiKw eZBBTM"
  >
    <span
      className="sc-AxhCb gRgvjz"
    >
      BATTLESHIP
    </span>
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="aircraft.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="battleship.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="carriership.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj cFBCnT"
  >
    <img
      className="sc-AxhUy dWjoNZ ship-image"
      src="submarine.png"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
    <div
      className="sc-fznZeY beoFBl"
    />
  </div>
</div>
`;

exports[`Storyshots game/Stat Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznxsB hgwTrS"
  >
    <div
      className="sc-fzpans DoiQQ"
    >
      <span
        className="sc-fzplWN iyluzC"
      >
        10
      </span>
      <span
        className="sc-fznyAO FULts"
      >
        Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Tile Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznJRM ioNmAn"
  >
    <div
      className="sc-AxheI cLBCkG"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game-mode/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznWqX hSCJuZ"
    onClick={[Function]}
  >
    READY
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Custom 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="submarine.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          X turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        CUSTOM
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Easy 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="carriership.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          Infinite turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        EASY
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Easy Selected 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="carriership.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          Infinite turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        EASY
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Hard 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="aircraft.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          50 turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        HARD
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Medium 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ ggoIgy game-mode-item"
    onClick={[Function]}
  >
    <div
      className="sc-fzoiQi cpbncM"
    >
      <div
        className="sc-fzqNqU cirPno ship-container"
      >
        <img
          className="sc-AxhUy dWjoNZ ship-image"
          src="battleship.png"
        />
        <span
          className="sc-fzoNJl hSVbAb"
        >
          100 turns
        </span>
      </div>
      <span
        className="sc-fzoyTs RIQxJ"
      >
        MEDIUM
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/GameModeScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzpmMD EFVBQ"
  >
    <div
      className="sc-fzoXWK EPFe"
      onClick={[Function]}
    >
      X
    </div>
    <div
      className="sc-fznxKY icNVvD"
    >
      <div
        className="sc-AxgMl iluWPs title"
      >
        GAME MODE
      </div>
      <div
        className="sc-fznMAR fLOlXc"
      >
        <div
          className="sc-fznWOq hGBxnn"
        >
          <div
            className="sc-fznWOq hGBxnn"
          >
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="carriership.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    Infinite turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  EASY
                </span>
              </div>
            </div>
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="battleship.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    100 turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  MEDIUM
                </span>
              </div>
            </div>
          </div>
          <div
            className="sc-fznWOq hGBxnn"
          >
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="aircraft.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    50 turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  HARD
                </span>
              </div>
            </div>
            <div
              className="sc-fzqARJ ggoIgy game-mode-item"
              onClick={[Function]}
            >
              <div
                className="sc-fzoiQi cpbncM"
              >
                <div
                  className="sc-fzqNqU cirPno ship-container"
                >
                  <img
                    className="sc-AxhUy dWjoNZ ship-image"
                    src="submarine.png"
                  />
                  <span
                    className="sc-fzoNJl hSVbAb"
                  >
                    X turns
                  </span>
                </div>
                <span
                  className="sc-fzoyTs RIQxJ"
                >
                  CUSTOM
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="sc-fzolEj cJRskT"
        />
      </div>
      <div
        className="sc-fznWqX duFGYY"
        onClick={[Function]}
      >
        READY
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots game-mode/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxgMl iluWPs"
  >
    GAME MODE
  </div>
</div>
`;

exports[`Storyshots home/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxirZ kgiUck"
    onClick={[Function]}
  >
    PRUEBA
  </div>
</div>
`;

exports[`Storyshots home/HomeScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoKki bZyqLI"
  >
    <div
      className="sc-fzoYkl gnJqaz"
    >
      <div
        className="sc-fzoxKX fWaYDY title"
      >
        BATTLESHIP
      </div>
      <div
        className="sc-AxirZ kgiUck"
        onClick={[Function]}
      >
        NEW GAME
      </div>
      <div
        className="sc-AxirZ kgiUck"
        onClick={[Function]}
      >
        LEADERBOARD
      </div>
      <div
        className="sc-AxirZ kgiUck"
        onClick={[Function]}
      >
        OPTIONS
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots home/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoxKX fWaYDY"
  >
    BATTLESHIP
  </div>
</div>
`;
